--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "body-parser": "~1.18.2",
     "bytes": "^3.0.0",
     "cookie-parser": "~1.4.3",
+    "css-loader": "^0.28.7",
     "debug": "~2.6.9",
     "ee-first": "^1.1.1",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "media-typer": "^0.3.0",
     "mime-db": "^1.32.0",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
-    "statuses": "^1.4.0"
+    "statuses": "^1.4.0",
+    "style-loader": "^0.19.0"
   }
 }
