--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "webpack": "webpack --config=src/webpack.config.js --watch"
+    "webpack": "webpack --config ./src/webpack.config.js --watch"
   },
   "dependencies": {
+    "autoprefixer": "^7.2.2",
     "body-parser": "~1.18.2",
     "bytes": "^3.0.0",
     "cookie-parser": "~1.4.3",
@@ -15,6 +16,7 @@
     "ee-first": "^1.1.1",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "extract-text-webpack-plugin": "^3.0.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "media-typer": "^0.3.0",
@@ -22,6 +24,7 @@
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
     "statuses": "^1.4.0",
-    "style-loader": "^0.19.0"
+    "style-loader": "^0.19.0",
+    "webpack": "^3.10.0"
   }
 }
