--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "media-typer": "^0.3.0",
     "mime-db": "^1.32.0",
     "morgan": "~1.9.0",
+    "sequelize": "^4.28.0",
     "serve-favicon": "~2.4.5",
+    "sqlite3": "^3.1.13",
     "statuses": "^1.4.0",
     "style-loader": "^0.19.0",
     "webpack": "^3.10.0"
