--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "ee-first": "^1.1.1",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^3.0.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "media-typer": "^0.3.0",
     "mime-db": "^1.32.0",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
     "sequelize": "^4.28.0",
     "serve-favicon": "~2.4.5",
     "sqlite3": "^3.1.13",
